--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-    "python.pythonPath": "/home/peng/anaconda3/bin/python",
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true
+  "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true,
+    "editor.quickSuggestions": {
+        "other": true,
+        "comments": false,
+        "strings": false
+      }
 }
